# migration_mongodb

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.py
config/: __init__.py  auth_config.py
data/: test_healthcare_data.csv
scripts/: analysis_csv_data.py  compare_csv_mongodb.py  crud_operations.py  init_auth.py  migration.py  quickstart.py
tests/: README.md  conftest.py  test_connection.py  test_crud.py  test_data_validation.py  test_integration.py  test_migration.py  test_migration_csv_test.py
