[project]
name = "mongodb-project"
version = "0.1.0"
description = "Migration de données médicales CSV vers MongoDB Atlas"
authors = [
    {name = "Pauline", email = "pauline.fernouxwork@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.14.1,<5.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mongodb_project", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -v"